# rsdockerspawner

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: index.rst
etc/: jupyterhub_config.py  setup-dev.sh  setup-notes.txt
rsdockerspawner/: __init__.py  base_pkconfig.py  rsdockerspawner.py  rsdockerspawner_console.py
rsdockerspawner/package_data/template/: 500.html
tests/: import_test.py
