[build-system]
requires = ["chronver", "setuptools>=66"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "RadiaSoft LLC", email = "pip@radiasoft.net" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Utilities",
]
dependencies = [
    "docker",
    "dockerspawner",
    "pykern",
    "tornado",
    "traitlets",
]
description = "multi-node DockerSpawner"
dynamic = ["version"]
name = "rsdockerspawner"
readme = "README.md"

[project.scripts]
rsdockerspawner = "rsdockerspawner.rsdockerspawner_console:main"

[project.urls]
Homepage = "https://git.radiasoft.org/rsdockerspawner"

[tool.setuptools.package-data]
rsdockerspawner = ["package_data/**"]

[tool.setuptools.packages.find]
include = ["rsdockerspawner*"]
